--- a/src/pages/http-500.astro
+++ b/src/pages/http-500.astro
@@ -3,6 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Seo from "../components/Seo.astro";
 import styles from "./http-500.scss?inline";
 import ErrorPage from "../views/ErrorPage.astro";
+import MainScript from "../components/MainScript.astro";
 ---
 
 <BaseLayout headerStyle="default">
@@ -15,7 +16,7 @@ import ErrorPage from "../views/ErrorPage.astro";
       imageAlt: "Neptune Mutual IPFS Gateway",
     }}
   />
-  <style slot="header" is:inline set:html={styles}></style>
+  <style slot="header" is:inline set:html={styles} nonce="0iUzu6Bv7cOYWfllpiioow=="></style>
   
   <ErrorPage 
     title="HTTP 500: Internal Server Error"
@@ -24,6 +25,6 @@ import ErrorPage from "../views/ErrorPage.astro";
   />
 
   <Fragment slot="footer">
-    <script src="../scripts/home/index.js"></script>
+    <MainScript/>
   </Fragment>
 </BaseLayout>
