Updated http-451.astro & http-500.astro pages to 451.astro & 500.astro pages

--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Seo from "../components/Seo.astro";
-import styles from "./http-500.scss?inline";
+import styles from "./500.scss?inline";
 import ErrorPage from "../views/ErrorPage.astro";
 import MainScript from "../components/MainScript.astro";
 ---
