--- a/src/pages/451.astro
+++ b/src/pages/451.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Seo from "../components/Seo.astro";
-import styles from "./http-451.scss?inline";
+import styles from "./451.scss?inline";
 import ErrorPage from "../views/ErrorPage.astro"
 import MainScript from "../components/MainScript.astro";
 ---
